--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ div:not(.problem) {
 	position: absolute;
 	top: 100px;
 	left: 200px;
+	right: 200px;
 }
 
 pre {
@@ -74,3 +75,4 @@ p:not(.title):not(.back_button), li:not(.title) {
 	margin-bottom: 100px;
 	color: #45d;
 }
+
