--- a/style.css
+++ b/style.css
@@ -27,18 +27,23 @@ body {
 	margin-left : 20px;
 }
 
-div:not(.problem) {
+div:not(.problem):not(.simple_div) {
 	background-color: #cfd;
 	position: absolute;
 	top: 100px;
-	left: 200px;
-	right: 200px;
+	left: 0px;
+	right: 0px;
+	margin: auto;
 }
 
-pre {
+.code {
 	font-size: 20px;
 	text-align: left;
 	font-family: "Courier", sans-serif;
+}
+
+.simple_div {
+	text-align: left;
 }
 
 .normal_div {
