MathJaxをウィンドウの横幅に合わせて改行するようにした

--- a/style.css
+++ b/style.css
@@ -107,3 +107,11 @@ a {
 	font-size: 40px;
 }
 
+pre {
+	white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
