Rhythm Circleのバグ修正、フォントの変更

--- a/games/Rhythm Circle (2019 ver.)/css/style.css
+++ b/games/Rhythm Circle (2019 ver.)/css/style.css
@@ -16,7 +16,7 @@ hr {
 
 h1, p, a, span {
 	text-align: center;
-	font-family: 'Lucida Grande';
+	font-family: "Verdana";
 	margin-top: 0;
 	margin-bottom: 0;
 }
